<?xml version="1.0"?>
<package format="3">
  <name>custom_microros_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for micro-ROS communication</description>
  <maintainer email="antonio@example.com">Antonio</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

